Added missing noinst header

--- a/src/data/Makefile.am
+++ b/src/data/Makefile.am
@@ -3,7 +3,7 @@ METASOURCES = AUTO
 noinst_LTLIBRARIES = libepiData.la
 noinst_HEADERS = SAXContactParse.hpp XmlCTWriter.hpp configExceptions.h \
 	contactMatrix.h contactTrace.hpp epiconfig.h infection.hpp occultReader.h \
-	occultWriter.h posterior.h sinrEpi.h sinrParms.h sparseMatrix.h speciesMat.h
+	occultWriter.h posterior.h sinrEpi.h sinrParms.h sparseMatrix.h speciesMat.h aiTypes.hpp
 libepiData_la_SOURCES = SAXContactParse.cpp XmlCTWriter.cpp \
 	configExceptions.cpp contactMatrix.cpp contactTrace.cpp epiconfig.cpp infection.cpp \
 	occultReader.cpp occultWriter.cpp posterior.cpp sinrEpi.cpp sparseMatrix.cpp \
