Another bug in the build system

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -2,5 +2,5 @@ INCLUDES =
 METASOURCES = AUTO
 noinst_LTLIBRARIES = librandom.la libstlStrTok.la
 libstlStrTok_la_SOURCES = stlStrTok.cpp
-noinst_HEADERS = stlStrTok.hpp random.h
+noinst_HEADERS = stlStrTok.hpp random.h EpiRiskException.hpp
 librandom_la_SOURCES = random.cpp
