--- a/src/utils/Python/Makefile.am
+++ b/src/utils/Python/Makefile.am
@@ -4,3 +4,5 @@ sbin_SCRIPTS = batchTruncate.py combinePosteriors.py comparePosterior.py \
 	createComScripts.py createConfScripts.py createMPIScript.py createSpeciesCov.py epiSize.py \
 	fakeMCMC.py getNumInfecs.py getPosteriorMeans.py infecFreq.py outputParser.py \
 	simMangle.py truncateSim.py countNetDegree.py
+
+EXTRA_DIST = $(sbin_SCRIPTS)
